Fixed Sort by ddn is not aligned in mobile view

--- a/src/app/page/miip-prog-detail-view/miipProgramDetailView.less
+++ b/src/app/page/miip-prog-detail-view/miipProgramDetailView.less
@@ -30,3 +30,14 @@
     }
   }
 }
+
+@media (max-width: @screen-xs) {
+  .miip-prog-detail {
+    .js-sortbyDdn.form-group {
+      float: right !important;
+      .bootstrap-select {
+        width: auto !important;
+      }
+    }
+  }
+}
